# recipes-app

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PRD.md  README.md  docker-compose.yml  package-lock.json  pyproject.toml  recipes.db  systemd-recipe-app.service
app/: db.py  llm_client.py  logger.py  main.py  schemas.py
app/static/: styles.css
app/templates/: base.html  index.html  notfound.html  ocr.html  ocr_result.html  recipe.html  saved.html
raspi_recipe_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
